--- a/styles/components/_productsPage.scss
+++ b/styles/components/_productsPage.scss
@@ -106,7 +106,7 @@
 .products-banner {
   display: grid;
   gap: 30px;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 1fr;
   padding: 20px 50px;
   border-bottom: 2px solid #000;
   transition: all 1s cubic-bezier(0, 1, 0, 1);
